CHANGES.txt - 08/26/2002
------------------------

CHANGES IN CUPS V1.1.16

	- Updated the cupsaddsmb command to support the new CUPS
	  driver for Windows NT/2k/XP.
	- Filter status lines longer than 1023 characters could
	  cause the scheduler to get into an infinite loop.
	- The scheduler didn't reset the job state to pending
	  when modifying an active printer.
	- Now limit the maximum number of recursion steps when
	  searching for a filter for a job, in case a user
	  defines a circular filter rule.
	- The PostScript filter would embed an invalid
	  requirements comment in some cases.
	- Added support for embedded job tickets in PostScript
	  files.
	- The PostScript filter now detects EPS files and should
	  better handle printing EPS files.
	- The cancel command now ignores a trailing destination
	  name when cancelling a specific job ID (Solaris
	  compatibility).
	- The scheduler now rejects jobs with copies outside the
	  range of 1 to MaxCopies, inclusive.
	- Added new MaxCopies directive to set the maximum
	  number of copies that a user can request.
	- The scheduler didn't block signals while it processed
	  others and when it forked processes.
	- The scheduler checked for new jobs to print when
	  stopping a job.  This caused jobs to restart before a
	  shutdown.
	- Updated the CUPS startup script to better support
	  different timezones and to support the RedHat/Mandrake
	  init script functions, if available.
	- The scheduler did not properly handle backslashes in
	  banner files; it incorrectly assumed that "\c" should
	  always be replaced by "c", instead of only looking for
	  "\{" and replacing it by "{".
	- The texttops filter didn't handle prettyprint=no.
	- The text and HP-GL/2 filters didn't check for other
	  common duplex option names like cupsMarkOptions() did.
	- "lpoptions -x printer" no longer clears the "default
	  printer" status of the printer.
	- cupsTempFd() now stops trying to create a temporary