@@ -1,8 +1,10 @@
-CHANGES.txt - 08/26/2002
+CHANGES.txt - 08/27/2002
 ------------------------
 
 CHANGES IN CUPS V1.1.16
 
+	- The "mirror" option was not being handled by the
+	  PostScript or image filters.
 	- Updated the cupsaddsmb command to support the new CUPS
 	  driver for Windows NT/2k/XP.
 	- Filter status lines longer than 1023 characters could
